# birdwatch

./: .gitignore  README.md  birdwatch.py  pyproject.toml  test_birdwatch.py
birdwatch/: __init__.py  run.py
