[tool.poetry]
name = "birdwatch"
version = "0.3.0"
description = "Twitter scraping library"
authors = ["cosmicoptima <parafactual@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
notebook = "^6.4.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
